test/fail/api/list/list_select_interrupted.lly
#[
ValueError: Test
Traceback:
    from list_select_interrupted.lly:11: in f
    from [C]: in List::select
    from list_select_interrupted.lly:14: in __main__
]#

define f(x: Integer): Boolean
{
    raise ValueError::new("Test\n")
}

[1].select(f)
